registry_v2/reg_svc.yml
apiVersion: v1
kind: Service
metadata:
  name: kube-registry-tls
  labels:
    k8s-app: kube-registry-tls
    kubernetes.io/name: "KubeRegistry"
spec:
  type: NodePort
  ports:
  - name: registry-tls
    port: 5000
    targetPort: 5000
    nodePort: 30009
  - name: registry-tls-ui
    port: 80
    targetPort: 80
    nodePort: 30007
  selector:
    k8s-app: kube-registry-tls
